Fix bug with font making extra margin on app

--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -1,11 +1,14 @@
-*:not(h1,h2,h3,h4,h5) {
+*{
   margin: 0;
   padding: 0;
+}
+
+body {
   font-family: 'Maven Pro', sans-serif;
   font-size: 0.95rem;
 }
 
 h1 h2 h3 h4 h5 {
   font-family: 'Maven Pro', sans-serif;
-
+  font-size: 1rem;
 }
